# artifactory-parser

./: README.md  config.py  pyproject.toml  repo_size.py
models/: model.py
